--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+nav li {
+  display: inline;
+  list-style-type: none;
+  float: left;
+}
+
+nav a {
+  display: block;
+  padding: 8px;
+}
