--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,16 +46,30 @@ nav a {
 }
 
 .master-form-container{
-    max-width: 400px;
+    max-width: 550px;
     padding: 8px;
     margin: 5px auto;
 }
 
+.master-form-container input[type="date"]{
+    border: none;
+    padding: 8px;
+    width:130px;
+}
+
 .master-form-container input[type="text"],
+.master-form-container textarea,
 .master-form-container input[type="date"],
 .master-form-container input[type="email"],
+.master-form-container input[type="checkbox"],
+.master-form-container input[type="radio"],
+.master-form-container select {
+    margin-bottom: 15px;
+}
+
 .master-form-container label {
-    margin-bottom: 8px;
+  font-weight: 600;
+  margin-bottom: 8px;
 }
 
 .master-form-container input[type="checkbox"],
@@ -65,13 +79,48 @@ nav a {
 }
 
 .master-form-container input[type="text"],
-.master-form-container input[type="date"],
 .master-form-container input[type="email"],
-.master-form-container textarea,
-.master-form-container select {
+.master-form-container select,
+.master-form-container textarea{
+    display: inline-block;
     border: none;
     padding: 8px;
     width: 100%;
     background-color: #e8eeef;
-    color:#8a97a0;
+}
+
+.err-output {
+  color: darkred;
+  font-style: italic;
+  margin-bottom: 12px;
+}
+
+.master-form-header select {
+    border: none;
+    padding:8px;
+    width:50px;
+    background-color: #e8eeef;
+    float: right;
+    display: block;
+}
+
+.master-form-container h2 {
+  margin-top: 50px;
+}
+
+.submit-button {
+    margin-top: 20px;
+    padding:36x 25px;
+    width: 14em;
+    height: 4em;
+    color:black;
+    background-color:#ccc;
+    border:2;
+    cursor:pointer;
+    border-radius: 10px;
+    margin-bottom: 32px;
+}
+
+.resume {
+  font-family: sans-serif;
 }
