--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 65px;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0;
   font-family: sans-serif;
 }
