--- a/client/src/styles/components/_loginForm.scss
+++ b/client/src/styles/components/_loginForm.scss
@@ -1,9 +1,29 @@
 .login-form{
   width: 400px;
   margin: 100px auto 0;
-  border: 2px solid black;
   padding: 40px;
   border-radius: 10px;
+  @include box-shadow(0 0 17px 2px rgba(0,0,0,0.75));
+  background-color: $lightGray;
+
+  .form-group:first-of-type {
+    margin-bottom: 15px;
+  }
+
+  input[type="text"], input[type="password"] {
+    border: 1px solid $eoPurple;
+  }
+
+  button {
+    background-color: $eoPurple;
+    border: 1px solid $eoPurple;
+    color: white;
+
+    &:hover {
+      background-color: transparent;
+      color: $eoPurple;
+    }
+  }
 
   .logo-wrapper {
     text-align: center;
