--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,4 +1,6 @@
+/* FONTS */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300");
+/* COLORS */
 a {
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
@@ -61,17 +63,51 @@ input[type="text"], input[type="email"], input[type="password"], input[type="tel
   display: -webkit-flex;
   display: flex; }
 
+html {
+  height: 100%; }
+
+body {
+  margin: 0;
+  padding-top: 65px;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  font-family: sans-serif;
+  height: 100%; }
+
 .login-form {
   width: 400px;
   margin: 100px auto 0;
-  border: 2px solid black;
   padding: 40px;
-  border-radius: 10px; }
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 17px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 17px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 17px 2px rgba(0, 0, 0, 0.75);
+  background-color: #f1f0f0; }
+  .login-form .form-group:first-of-type {
+    margin-bottom: 15px; }
+  .login-form input[type="text"], .login-form input[type="password"] {
+    border: 1px solid #7c4399; }
+  .login-form button {
+    background-color: #7c4399;
+    border: 1px solid #7c4399;
+    color: white; }
+    .login-form button:hover {
+      background-color: transparent;
+      color: #7c4399; }
   .login-form .logo-wrapper {
     text-align: center; }
   .login-form .button-wrapper {
     text-align: center; }
     .login-form .button-wrapper button {
       margin-top: 15px; }
+
+body.login-page {
+  background: -moz-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, #2431C7), color-stop(100%, #BAC4D6));
+  background: -webkit-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
+  background: -o-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
+  background: -ms-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
+  background: linear-gradient(to bottom, #2431C7 0%, #BAC4D6 100%); }
 
 /*# sourceMappingURL=main.css.map */
