Update style of login component

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -72,8 +72,7 @@ body {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 0;
-  font-family: sans-serif;
-  height: 100%; }
+  font-family: sans-serif; }
 
 .login-form {
   width: 400px;
@@ -83,7 +82,7 @@ body {
   -webkit-box-shadow: 0 0 17px 2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0 0 17px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 0 0 17px 2px rgba(0, 0, 0, 0.75);
-  background-color: #f1f0f0; }
+  background-color: #ffffff; }
   .login-form .form-group:first-of-type {
     margin-bottom: 15px; }
   .login-form input[type="text"], .login-form input[type="password"] {
@@ -103,11 +102,11 @@ body {
       margin-top: 15px; }
 
 body.login-page {
-  background: -moz-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
+  background: -moz-linear-gradient(top, #7c4399 0%, #BAC4D6 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, #2431C7), color-stop(100%, #BAC4D6));
-  background: -webkit-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
-  background: -o-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
-  background: -ms-linear-gradient(top, #2431C7 0%, #BAC4D6 100%);
-  background: linear-gradient(to bottom, #2431C7 0%, #BAC4D6 100%); }
+  background: -webkit-linear-gradient(top, #7c4399 0%, #BAC4D6 100%);
+  background: -o-linear-gradient(top, #7c4399 0%, #BAC4D6 100%);
+  background: -ms-linear-gradient(top, #7c4399 0%, #BAC4D6 100%);
+  background: linear-gradient(to bottom, #7c4399 0%, #BAC4D6 100%); }
 
 /*# sourceMappingURL=main.css.map */
