--- a/client/src/styles/components/_loginForm.scss
+++ b/client/src/styles/components/_loginForm.scss
@@ -1,10 +1,10 @@
 .login-form{
   width: 400px;
-  margin: 100px auto 0;
+  margin: 40px auto 0;
   padding: 40px;
   border-radius: 10px;
   @include box-shadow(0 0 17px 2px rgba(0,0,0,0.75));
-  background-color: $lightGray;
+  background-color: white;
 
   .form-group:first-of-type {
     margin-bottom: 15px;
