--- a/client/src/styles/utils/_normalize.scss
+++ b/client/src/styles/utils/_normalize.scss
@@ -1,13 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   height: 100%;
 }
 
 body {
   margin: 0;
-  padding-top: 65px;
-  padding-left: 0;
-  padding-right: 0;
-  padding-bottom: 0;
+  padding: 0;
   font-family: sans-serif;
-  height: 100%;
+}
+
+img {
+  max-width: 100%;
 }
