style user facing components and create client table

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -44,13 +44,13 @@ label {
   font-family: "Open Sans Condensed", sans-serif;
   font-size: 18px; }
 
-input[type="text"], input[type="email"], input[type="password"], input[type="tel"], input[type="number"], textarea, select {
+input[type="date"], input[type="text"], input[type="email"], input[type="password"], input[type="tel"], input[type="number"], textarea, select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border: 2px solid black;
+  border: 1px solid #7c4399;
   border-radius: 0;
-  background: white;
+  background: #f1f0f0;
   padding: 10px;
   resize: none;
   width: 100%;
@@ -76,7 +76,11 @@ body {
   font-family: sans-serif; }
 
 img {
-  max-width: 100%; }
+  max-width: 100%;
+  height: auto; }
+
+body * {
+  box-sizing: border-box; }
 
 p, li {
   font-family: "Open Sans Condensed", sans-serif; }
@@ -159,6 +163,113 @@ h4 {
       .user-navbar ul li:hover {
         text-decoration: underline; }
 
+.master-form {
+  -webkit-flex: 1;
+  flex: 1;
+  padding-left: 3%;
+  background-color: #BAC4D6;
+  margin-top: 10px;
+  border-top-left-radius: 10px;
+  margin-left: 2px;
+  padding-bottom: 60px; }
+  .master-form .choose-resume-type {
+    width: auto; }
+  .master-form input, .master-form select {
+    max-width: 600px;
+    font-size: 16px;
+    font-family: "Open Sans Condensed", sans-serif; }
+  .master-form label {
+    display: block;
+    margin-bottom: 3px; }
+  .master-form .err-output span {
+    font-family: "Open Sans Condensed", sans-serif;
+    font-size: 12px;
+    color: darkred;
+    margin-left: 5px; }
+  .master-form h1 {
+    margin-bottom: 15px; }
+  .master-form h2 {
+    margin-top: 25px; }
+  .master-form h3, .master-form h4 {
+    margin-top: 15px; }
+  .master-form h4 {
+    margin-bottom: 5px; }
+  .master-form .section {
+    margin-top: 5px; }
+    .master-form .section div + div {
+      margin-top: 10px; }
+  .master-form input[type="date"] {
+    width: auto; }
+  .master-form button {
+    margin-top: 10px; }
+  .master-form li {
+    list-style: none; }
+  .master-form label[for="fulltime"], .master-form label[for="parttime"] {
+    display: inline-block;
+    margin-right: 5px; }
+  .master-form label[for="parttime"] {
+    margin-left: 15px; }
+  .master-form .days label, .master-form .hours label, .master-form .inside-outside label {
+    display: inline-block;
+    margin-right: 4px; }
+  .master-form .days input, .master-form .hours input, .master-form .inside-outside input {
+    margin-right: 10px; }
+  .master-form label[for="no_work_exp"] {
+    display: inline-block;
+    margin-right: 4px; }
+  .master-form .personal-or-business {
+    margin-top: 10px; }
+    .master-form .personal-or-business label {
+      display: inline-block; }
+    .master-form .personal-or-business > div > div {
+      display: inline-block;
+      margin-left: 5px; }
+  .master-form button.add-section {
+    margin-top: 15px; }
+    .master-form button.add-section.task {
+      margin-bottom: 20px; }
+  .master-form .submit-container {
+    margin-top: 50px; }
+    .master-form .submit-container button {
+      width: 300px;
+      background-color: #7c4399;
+      border: 1px solid #7c4399;
+      color: white; }
+      .master-form .submit-container button:hover {
+        background-color: white;
+        color: #7c4399; }
+
+.clients-table {
+  -webkit-flex: 1;
+  flex: 1;
+  background-color: #BAC4D6;
+  border-top-left-radius: 10px;
+  margin-top: 10px;
+  margin-left: 2px; }
+  .clients-table table {
+    width: 100%;
+    border-collapse: collapse; }
+  .clients-table td, .clients-table th {
+    font-family: "Open Sans Condensed", sans-serif;
+    padding-top: 3px;
+    padding-bottom: 3px; }
+    .clients-table td:first-of-type, .clients-table th:first-of-type {
+      padding-left: 3%; }
+  .clients-table td {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black; }
+  .clients-table th {
+    font-weight: bold;
+    font-size: 18px;
+    text-align: left; }
+  .clients-table thead {
+    background-color: #9973b0; }
+  .clients-table tr:nth-of-type(even) {
+    background-color: #C8D2E4; }
+  .clients-table tr:hover {
+    background-color: #6e78d6;
+    cursor: pointer; }
+
 body.login-page {
   background: -moz-linear-gradient(top, #7c4399 0%, #BAC4D6 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, #7c4399), color-stop(100%, #BAC4D6));
@@ -166,5 +277,9 @@ body.login-page {
   background: -o-linear-gradient(top, #7c4399 0%, #BAC4D6 100%);
   background: -ms-linear-gradient(top, #7c4399 0%, #BAC4D6 100%);
   background: linear-gradient(to bottom, #7c4399 0%, #BAC4D6 100%); }
+
+.master-form-page > .container {
+  -webkit-align-items: flex-start;
+  align-items: flex-start; }
 
 /*# sourceMappingURL=main.css.map */
