--- a/client/src/styles/components/_masterForm.scss
+++ b/client/src/styles/components/_masterForm.scss
@@ -11,7 +11,7 @@
     width: auto;
   }
 
-  input, select {
+  input, select, textarea {
     max-width: 600px;
     font-size: 16px;
     font-family: $bodyCopy;
